[package]
name = "urgrep"
version = "0.1.0"
authors = ["Erik <allareri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["executor"] }